# image_recorder

./: .gitignore  CMakeLists.txt  README.md  image_recorder.py  package.xml
image_saver/: CMakeLists.txt  README.md  package.xml  使用说明.md
image_saver/launch/: README.md  demo.launch  getAndSave.launch  image_saver.launch
image_saver/src/: image_saver.cpp  trigger.cpp
launch/: image_recorder.launch
my_image_publisher/: CMakeLists.txt  README.md  package.xml
my_image_publisher/launch/: camera_info_publisher.launch  img_publisher.launch
my_image_publisher/src/: my_image_publisher.cpp  publish_camera_info.cpp
src/: image_recorder.cpp
